--- a/package.json
+++ b/package.json
@@ -6,5 +6,16 @@
   "engines": {
     "node": "~16.17.0",
     "pnpm": "~7.13.4"
+  },
+  "scripts": {
+    "build": "rollup --config rollup.config.mjs",
+    "watch": "rollup --config rollup.config.mjs --watch"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^23.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.0",
+    "pnpm": "7.13.4",
+    "rollup": "^3.1.0",
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
