--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "pnpm": "7.13.4",
     "rollup": "^3.1.0",
     "rollup-plugin-terser": "^7.0.2"
+  },
+  "dependencies": {
+    "@hotwired/stimulus": "^3.1.0",
+    "@hotwired/turbo": "^7.2.2",
+    "feather-icons": "^4.29.0"
   }
 }
