--- a/package.json
+++ b/package.json
@@ -8,19 +8,29 @@
     "pnpm": "~7.13.4"
   },
   "scripts": {
-    "build": "rollup --config rollup.config.mjs",
-    "watch": "rollup --config rollup.config.mjs --watch"
-  },
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^23.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.0",
-    "pnpm": "7.13.4",
-    "rollup": "^3.1.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "build": "$npm_execpath run js:build && $npm_execpath run css:build",
+    "watch": "concurrently \"$npm_execpath run js:watch\" \"$npm_execpath run css:watch\"",
+    "js:build": "rollup --config rollup.config.mjs",
+    "js:watch": "rollup --watch --config rollup.config.mjs",
+    "css:build": "$npm_execpath run css:transform && $npm_execpath run css:minify",
+    "css:watch": "sass --load-path=node_modules --watch apps/web/assets/src/stylesheets/styles.scss apps/web/assets/dist/stylesheets/styles.css",
+    "css:transform": "sass --load-path=node_modules apps/web/assets/src/stylesheets/styles.scss apps/web/assets/dist/stylesheets/styles.css",
+    "css:minify": "lightningcss --minify --nesting --targets '>= 0.25%' --sourcemap apps/web/assets/dist/stylesheets/styles.css -o apps/web/assets/dist/stylesheets/styles.css"
   },
   "dependencies": {
     "@hotwired/stimulus": "^3.1.0",
     "@hotwired/turbo": "^7.2.2",
-    "feather-icons": "^4.29.0"
+    "feather-icons": "^4.29.0",
+    "gralig": "^1.0.0",
+    "sanitize.css": "^13.0.0"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^23.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.0",
+    "lightningcss-cli": "^1.16.0",
+    "pnpm": "7.13.4",
+    "rollup": "^3.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.55.0"
   }
 }
