--- a/package.json
+++ b/package.json
@@ -18,20 +18,23 @@
     "css:minify": "lightningcss --minify --nesting --targets '>= 0.25%' apps/web/assets/dist/stylesheets/styles.css -o apps/web/assets/dist/stylesheets/styles.css"
   },
   "dependencies": {
-    "@hotwired/stimulus": "^3.1.0",
-    "@hotwired/turbo": "^7.2.2",
+    "@hotwired/stimulus": "^3.2.1",
+    "@hotwired/turbo": "^7.2.4",
     "feather-icons": "^4.29.0",
     "gralig": "^1.0.0",
     "sanitize.css": "^13.0.0",
     "sortablejs": "^1.15.0"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^23.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.0",
-    "lightningcss-cli": "^1.16.0",
-    "pnpm": "7.13.4",
-    "rollup": "^3.1.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "sass": "^1.55.0"
+    "@rollup/plugin-commonjs": "^23.0.7",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-replace": "^5.0.2",
+    "@rollup/plugin-terser": "^0.2.0",
+    "lightningcss-cli": "^1.17.1",
+    "plugin-json\n": "link:@rollup/plugin-json\n",
+    "pnpm": "^7.18.2",
+    "rollup": "^3.7.5",
+    "sass": "^1.57.0"
   }
 }
