--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "build": "$npm_execpath run js:build && $npm_execpath run css:build",
     "watch": "concurrently \"$npm_execpath run js:watch\" \"$npm_execpath run css:watch\"",
-    "js:build": "rollup --config rollup.config.mjs",
-    "js:watch": "rollup --watch --config rollup.config.mjs",
+    "js:build": "rollup --config rollup.config.cjs",
+    "js:watch": "rollup --watch --config rollup.config.cjs",
     "css:build": "$npm_execpath run css:transform && $npm_execpath run css:minify",
     "css:watch": "sass --no-source-map --load-path=node_modules --watch apps/web/assets/src/stylesheets/styles.scss apps/web/assets/dist/stylesheets/styles.css",
     "css:transform": "sass --no-source-map --load-path=node_modules apps/web/assets/src/stylesheets/styles.scss apps/web/assets/dist/stylesheets/styles.css",
@@ -32,7 +32,6 @@
     "@rollup/plugin-replace": "^5.0.2",
     "@rollup/plugin-terser": "^0.2.0",
     "lightningcss-cli": "^1.17.1",
-    "plugin-json\n": "link:@rollup/plugin-json\n",
     "pnpm": "^7.18.2",
     "rollup": "^3.7.5",
     "sass": "^1.57.0"
