Preferences modal with dropdown selectors; view definitions in mixin

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "js:watch": "rollup --watch --config rollup.config.cjs",
     "css:build": "$npm_execpath run css:transform && $npm_execpath run css:minify",
     "css:watch": "sass --no-source-map --load-path=node_modules --watch apps/web/assets/src/stylesheets/styles.scss apps/web/assets/dist/stylesheets/styles.css",
-    "css:transform": "sass --no-source-map --load-path=node_modules apps/web/assets/src/stylesheets/styles.scss apps/web/assets/dist/stylesheets/styles.css",
+    "css:transform": "sass --load-path=node_modules apps/web/assets/src/stylesheets/styles.scss apps/web/assets/dist/stylesheets/styles.css",
     "css:minify": "lightningcss --minify --nesting --targets '>= 0.25%' apps/web/assets/dist/stylesheets/styles.css -o apps/web/assets/dist/stylesheets/styles.css"
   },
   "dependencies": {
@@ -23,7 +23,8 @@
     "feather-icons": "^4.29.0",
     "gralig": "^1.0.0",
     "sanitize.css": "^13.0.0",
-    "sortablejs": "^1.15.0"
+    "sortablejs": "^1.15.0",
+    "vanilla-js-dropdown": "^2.2.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^23.0.7",
