--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "RSS Reader",
   "license": "ISC",
   "engines": {
-    "node": "~16",
-    "pnpm": "~7.21.0"
+    "node": "^18.12.0",
+    "pnpm": "^7.21.0"
   },
   "scripts": {
     "pre-watch": "node ./bin/clean_assets.js",
@@ -36,7 +36,7 @@
     "@rollup/plugin-terser": "^0.2.1",
     "concurrently": "^7.6.0",
     "csso-cli": "^4.0.1",
-    "pnpm": "~7.21.0",
+    "pnpm": "^7.21.0",
     "rollup": "^3.9.0",
     "sass": "^1.57.1"
   }
