--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,9 +1,9 @@
 [phases.setup]
-cmds = ['...', 'npm install -g pnpm@9']
+cmds = ['...', 'npm install -g corepack', 'corepack enable', 'corepack prepare pnpm@9 --activate']
 
 [phases.install]
 dependsOn = ['setup']
-cmds = ['...', 'pnpm install']
+cmds = ['...']
 
 [phases.build]
 dependsOn = ['install']
